# umaai-rs

./: .gitignore  Cargo.toml  game_config.toml
crates/analyzer/src/: main.rs
crates/umaai/: Cargo.toml  build.rs  game_config.toml
crates/umaai/src/: lib.rs  main.rs  utils.rs
crates/umaai/src/protocol/: mod.rs  onsen.rs  urafile.rs
crates/umasim/: Cargo.toml
crates/umasim/gamedata/: events.json  scenario_onsen.json
crates/umasim/src/: collector.rs  lib.rs  main.rs  sample_collector.rs  training_sample.rs  utils.rs
crates/umasim/src/game/: inherit.rs  mod.rs  simulator.rs  support_card.rs  traits.rs  uma.rs
crates/umasim/src/game/base/: action.rs  basic.rs  mod.rs  person.rs
crates/umasim/src/game/onsen/: action.rs  game.rs  mod.rs
crates/umasim/src/gamedata/: mod.rs  onsen.rs
crates/umasim/src/neural/: evaluator.rs  handwritten_evaluator.rs  mod.rs  neural_net_evaluator.rs  value_output.rs
crates/umasim/src/search/: config.rs  flat_search.rs  mod.rs  result.rs
crates/umasim/src/trainer/: collector_trainer.rs  handwritten_trainer.rs  mcts_trainer.rs  mean_filter_collector_trainer.rs  mod.rs  neural_net_trainer.rs
gamedata/: cardDB.json  constants - 不打泥地.json  constants.json  default_config.toml  scenario_onsen.json  umaDB.json
scripts/export_support_card/: cardDB.json  main.py  translators.py  umaDB.json  umadb.py  umamodels.py
