[workspace]
members = ["crates/umasim", "crates/umaai"]
resolver = "2"

[profile.release]
opt-level = 'z'
debug = true
codegen-units = 16
lto = false

[workspace.dependencies]
umasim = { path = "crates/umasim" }
anyhow = "1.0.100"
bincode = "1.3.3"
chrono = "0.4.42"
clap = { version = "4.5.50", features = ["derive"] }
colored = "3.0.0"
comfy-table = "7.2.1"
enum-iterator = "2.3.0"
env_logger = "0.11.8"
fs-err = "3.1.3"
hashbrown = { version = "0.16.0", features = ["serde"] }
indicatif = "0.18.1"
log = "0.4.28"
notify = "8.2.0"
rand = { version = "0.9.2", features = ["serde", "std_rng"] }
rand_distr = { version = "0.5.1", features = ["serde"] }
rayon = "1.11.0"
salvo = "0.84.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
inquire = "0.9.1"
ratatui = { version = "0.29.0", features = ["all-widgets", "macros", "palette", "serde"] }
text-to-ascii-art = "0.1.10"
flexi_logger = "0.31.7"

# ONNX 推理
tract-onnx = "0.22.0"
ndarray = "0.17.1"