[package]
name = "umaai"
version = "0.1.0"
edition = "2024"

[build-dependencies]
winres = "0.1.12"

[dependencies]
umasim.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
enum-iterator.workspace = true
env_logger.workspace = true
fs-err.workspace = true
hashbrown.workspace = true
indicatif.workspace = true
inquire.workspace = true
log.workspace = true
notify.workspace = true
rand.workspace = true
rand_distr.workspace = true
ratatui.workspace = true
rayon.workspace = true
salvo.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
text-to-ascii-art.workspace = true
flexi_logger.workspace = true
